# podsync

./: AUTHORS  CROSS_COMPILING.md  Cargo.toml  README.md  build.rs  sqlx-data.json
.github/workflows/: ci.yml  publish.yml  release.yml
.sqlx/: query-231f8122b0dadd15f2e33c64f5d1a14b8f70081174d9f027e43235eac55b9acc.json  query-3fb9d968e52bdbfc981705fd91aa8b6b2c3d573a2e7dce7fe9652c1913a2f5bd.json  query-498016c291834ae5044f5ba0318ab3779bb0c01e0abedc0b5d40f0a6346f21c8.json  query-57d484d4581d50a8d41a914e79e6a0870f73f7915acbe7ba84783bcf15aaadc6.json  query-5b0366048dc4ec797b64826150a81df48540307e98d91d8d84d4045b7f7da76f.json  query-6a8d46bd6803e85602f7807594dfd7f815db47a9456d127fee88326b254bd007.json  query-71f499aa1de930510305158864820865a904805b9a7ef74533859d320884f3eb.json  query-7ebf96081846963d9a88543df229c8cb687b65d2c1f8ce7285f70324b5a3e0c6.json  query-90be6c101c11fa3847d2a2f7e1f70a7e9d2e686945c12e7382c832f989fce687.json  query-91fec3ed5f2965fc18eda1d7f9fea8dbff81d91b9e15b055914c5e6a063cb21e.json  query-9e6dec71348701a9b6f9fc4b848aad31d654d1ff7c42cb49f4155cad1866618c.json  query-b276f81a7c3c206c558d6d5def3ffb19cf7bb46ad738e6c262ba3b592dd553e1.json  query-d8efd2d5bcf76f9fdd7e7ad475963148eacd57d4e3415c42508c932b5b516769.json  query-f2909b05f07252d28cf3cf9f14d2a88a4e2805d3f012794ac7eca6250de084a5.json  query-f468a7c32b46ff9a0c5013b14d8d0a579195f763d8180ab604aac67569006853.json
contrib/debian/: Makefile  logrotate.conf  podsync
migrations/: 1_devices.sql  2_subscriptions.sql  3_episodes.sql  4_users.sql  5_episodes_modified.sql
scripts/: add-user.sh  dbsetup.sh  with-db.sh
src/: args.rs  auth.rs  backend.rs  device.rs  episode.rs  main.rs  mock.rs  path_format.rs  podsync.rs  subscription.rs  time.rs  user.rs
src/backend/: backend_file.rs  backend_sql.rs
src/backend/backend_file/: kv.rs
src/episode/: action.rs  episode.rs  episodes.rs  mod.rs  time.rs
