[package]
name = "podsync"
version = "0.1.3"
edition = "2021"

description = "A server to sync podcasts with, mirroring the gpodder API. Designed for use with AntennaPod"
license = "GPL-3.0-or-later"
homepage = "https://github.com/bobrippling/podsync"
repository = "https://github.com/bobrippling/podsync"

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_with = "2.3.1"
time = { version = "0.3.20", features = ["serde", "formatting", "parsing", "macros", "local-offset", "std"] }
clap = { version = "4.1.8", features = ["derive"] }

log = "0.4.17"
pretty_env_logger = "0.4.0"

cookie = "0.17.0"
warp = "0.3.3"

sqlx = { version = "0.6.2", features = ["sqlite", "time", "offline"]}
# sqlx-cli

base64_light = "0.1.5"
sha256 = "1.1.2"
uuid = { version = "1.3.0", features = ["v4"] }

[features]
default = ["rustls"]
native-tls = ["sqlx/runtime-tokio-native-tls"]
rustls = ["sqlx/runtime-tokio-rustls", "warp/tokio-rustls"]
