[package]
name = "podsync"
version = "0.1.4"
edition = "2021"

description = "A server to sync podcasts with, mirroring the gpodder API. Designed for use with AntennaPod"
license = "GPL-3.0-or-later"
homepage = "https://github.com/bobrippling/podsync"
repository = "https://github.com/bobrippling/podsync"

[dependencies]
tokio = { version = "1.33", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.3"
serde_json = "1.0"
time = { version = "0.3.35", features = ["serde", "formatting", "parsing", "macros", "local-offset", "std"] }
clap = { version = "4.4", features = ["derive"] }

log = "0.4"
pretty_env_logger = "0.5"

cookie = "0.18"
warp = "0.3"

sqlx = { version = "0.6", features = ["sqlite", "time", "offline"], optional = true }
# sqlx-cli

base64_light = "0.1"
sha256 = "1.4"
uuid = { version = "1.4", features = ["v4"] }

[features]
default = ["rustls"]
native-tls = ["sqlx/runtime-tokio-native-tls"]
rustls = ["sqlx/runtime-tokio-rustls", "warp/tokio-rustls"]

backend-sql = ["dep:sqlx"]
backend-file = []
